# logos-basecamp

./: CLAUDE.md  README.md  flake.nix  run-dev.sh
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp
app/macos/: macWindowStyle.mm
app/utils/: LogosBasecampPaths.h
ci/: combined.Jenkinsfile  linux.Jenkinsfile  macos.Jenkinsfile
docs/: index.md  project.md  spec.md
nix/: app.nix  integration-test.nix  main-ui.nix  smoke-test.nix
scripts/: sign-and-notarize.sh
src/: CMakeLists.txt  MainUIBackend.cpp  MainUIBackend.h  PluginLoader.cpp  main_ui_plugin.cpp  main_ui_plugin.h  mdiview.cpp  mdiview.h
src/oop/backends/: MacEmbedWidget.h  MacEmbedWidget.mm
src/qml/views/: CoreModulesView.qml
src/restricted/: RestrictedUrlInterceptor.cpp
tests/: ui-tests.mjs
wot_ui/: Main.qml  README.md  manifest.json  metadata.json
